force-app/main/default/objects/Address__c/fields/createdInMaster_FieldCanBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>createdInMaster_FieldCanBeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>נוצר במאסטר - בדיקה</label>
    <type>Checkbox</type>
</CustomField>