force-app/main/default/objects/Address__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>