force-app/main/default/objects/Address__c/fields/IBM_Balances__c.field-meta.xml
<CustomField>
    <fullName>IBM_Balances__c</fullName>
    <label>IBM_Balances</label>
    <length>80</length>
    <referenceTo>IBM_Balances__x</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>ExternalLookup</type>
</CustomField>