force-app/main/default/objects/Address__c/fields/Text2NumberField__c.field-meta.xml
<CustomField>
    <fullName>Text2NumberField__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Text2NumberField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>