force-app/main/default/objects/Address__c/fields/url_test1__c.field-meta.xml
<CustomField>
    <fullName>url_test1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>url_test1</label>
    <type>Url</type>
</CustomField>